# Robotic_Arm_6DOF

./: README.md
MaTlab/: Arm.slx  Arm.slxc  Arm.xml  Arm1_Default_sldprt.STEP  Arm2_Default_sldprt.STEP  ArmFK.slx  ArmFK.slx.autosave  ArmFK.slx.original  ArmFK.slxc  Arm_DataFile.m  BaseT_Default_sldprt.STEP  FK_Plot.asv  FK_Plot.m  Gripper _base_Default_sldprt.STEP  L_Default_sldprt.STEP  WaistT_Default_sldprt.STEP  backup_workspace.mat  gripper_Default_sldprt.STEP  myRoobot.asv  myRoobot.m  test_servo.asv  test_servo.m  trajPlot.m  urdf.m
ROS2/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2/log/: latest_build
ROS2/scripts/: esp_bridge.py
ROS2/src/robot_arm_description/: CMakeLists.txt  package.xml
ROS2/src/robot_arm_urdf/: CMakeLists.txt
SoildWorks/: Arm.SLDASM  Arm1.SLDPRT  Arm2.SLDPRT  BaseT.SLDPRT  Gear_1.SLDPRT  Gear_2.SLDPRT  Gripper _base.SLDPRT  Gripper1.SLDPRT  Gripper2.SLDPRT  L.SLDPRT  Link1.SLDPRT  Link2.SLDPRT  WaistT.SLDPRT
install/: local_setup.sh  setup.sh
log/: latest_build
rosbag2_2026_05_13-04_26_21/: metadata.yaml  rosbag2_2026_05_13-04_26_21_0.mcap
scripts/: esp_bridge.py
src/robot_arm_control/: package.xml  setup.py
src/robot_arm_control/robot_arm_control/: trajectory_planning.py
src/robot_arm_moveit_config/: package.xml
src/robot_arm_moveit_config/config/: moveit_controllers.yaml
src/robot_arm_moveit_config/launch/: arm_with_trajectory.launch.py  demo.launch.py  setup_assistant.launch.py
src/robot_arm_moveit_config_backup/config/: joint_limits.yaml  moveit_controllers.yaml  (+1 more)
src/robot_arm_urdf/: package.xml
(+71 files in other folders)
