<?xml version="1.0"?>
<package format="3">
  <name>robot_arm_control</name>
  <version>0.0.1</version>
  <description>Trajectory Planning</description>
  <maintainer email="test@test.com">khaled</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>moveit_py</depend>
  <depend>geometry_msgs</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
